src/objects/Agape_Campaign_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Goals</relationshipLabel>
        <relationshipName>zCampaign_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Agape_Goal__c</referenceTo>
        <relationshipLabel>Campaign Goals</relationshipLabel>
        <relationshipName>zCampaign_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Goal__c</fullName>
        <formula>Goal__r.Parent_Goal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Goal</label>
        <type>Text</type>
    </fields>
    <label>Campaign Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CG-{000000000}</displayFormat>
        <label>Campaign Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>